--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
+  },
+  "resolutions": {
+    "got": ">=11.8.5",
+    "highlight.js": ">=10.4.1",
+    "semver-regex": ">=3.1.3"
   }
 }
