--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "resolutions": {
     "got": ">=11.8.5",
     "highlight.js": ">=10.4.1",
-    "semver-regex": ">=3.1.3"
+    "semver-regex": ">=3.1.3",
+    "trim": ">=0.0.3"
   }
 }
