--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -23,10 +23,10 @@
   },
   "dependencies": {
     "@bonfhir/ui-components": "^0.1.0-alpha.1",
-    "@docusaurus/core": "2.2.0",
-    "@docusaurus/plugin-content-docs": "^2.2.0",
-    "@docusaurus/preset-classic": "2.2.0",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.2.0",
+    "@docusaurus/core": "^2.3.1",
+    "@docusaurus/plugin-content-docs": "^2.3.1",
+    "@docusaurus/preset-classic": "^2.3.1",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.3.1",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
@@ -34,7 +34,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.2.0",
+    "@docusaurus/module-type-aliases": "^2.3.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "@types/copyfiles": "^2",
     "@types/rimraf": "^3",
